Fix styles, whitespace

--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,14 @@ body {
 }
 
 html,
-body,
-#root {
+body {
   height: 100%;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
+
 #root {
+  min-height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,6 +26,7 @@ ul {
   list-style: none;
   padding: 1rem;
 }
+
 button {
   padding: 0;
   border: none;
@@ -33,16 +35,19 @@ button {
   opacity: 0.75;
   transition: 200ms;
 }
+
 button:hover {
   opacity: 1;
   transform: translateY(-0.2rem) scale(1.025);
   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.06), 12px 12px 8px rgba(0, 0, 0, 0.1),
     48px 48px 32px rgba(0, 0, 0, 0.15);
 }
+
 button {
   margin: 0;
   aspect-ratio: 38 / 50;
 }
+
 img {
   width: 100%;
   height: 100%;
@@ -67,9 +72,11 @@ img {
   mix-blend-mode: normal;
   object-position: 0;
 }
+
 ::view-transition-old(image-test) {
   object-fit: contain;
 }
+
 ::view-transition-new(image-test) {
   object-fit: cover;
 }
